feat(analytics): implement GA4 tracking with secure config

--- a/popup.html
+++ b/popup.html
@@ -73,6 +73,14 @@
                     </div>
                 </div>
 
+                <div class="settings-group">
+                    <label class="settings-label">Privacidad</label>
+                    <label class="radio-label">
+                        <input type="checkbox" id="checkAnalytics" checked>
+                        Contribuir con estadísticas anónimas
+                    </label>
+                </div>
+
                 <div class="disclaimer">
                     <span class="settings-label">Privacidad</span>
                     Esta extensión <strong>NO</strong> recopila datos personales, de la cuenta ni de la ciudad.<br>
@@ -95,7 +103,7 @@
     <script src="lib/xlsx.mini.min.js"></script>
     <script src="lib/exceljs.min.js"></script>
     <script src="lib/icons_base64.js"></script>
-    <script src="src/popup.js"></script>
+    <script src="src/popup.js" type="module"></script>
 </body>
 
 </html>
