docs: update README/UI and add store screenshot (ignore STORE_LISTING)

--- a/popup.html
+++ b/popup.html
@@ -79,6 +79,10 @@
                         <input type="checkbox" id="checkAnalytics" checked>
                         Contribuir con estadísticas anónimas
                     </label>
+                    <p class="btn-desc" style="margin-left: 24px; color: var(--foe-text-muted);">
+                        Ayúdanos a mejorar enviando qué funciones utilizas (ej: "Exportar Excel").<br>
+                        <strong>Nunca</strong> enviamos datos de tu cuenta, ciudad o inventario.
+                    </p>
                 </div>
 
                 <div class="disclaimer">
