--- a/popup.html
+++ b/popup.html
@@ -77,7 +77,8 @@
 
                 <div class="settings-group">
                     <span class="settings-label" data-i18n="settings.language">Language</span>
-                    <select id="selectLanguage" class="input-subfolder" style="width: 100%; margin-top: 8px;">
+                    <select id="selectLanguage" class="input-subfolder"
+                        style="margin-left: 0; width: auto; min-width: 120px;">
                         <!-- Options populated dynamically by i18n -->
                     </select>
                 </div>
