feat(settings): Add version display in settings panel

--- a/popup.html
+++ b/popup.html
@@ -105,6 +105,10 @@
                     <span data-i18n="privacy.localProcessing">Data is processed locally only to generate the
                         Excel.</span>
                 </div>
+
+                <div class="version-info">
+                    <span data-i18n="app.version">Version</span>: <span id="appVersion">-</span>
+                </div>
             </div>
 
             <button id="btnBack" class="foe-btn back-btn" data-i18n="app.back">Back</button>
