--- a/popup.html
+++ b/popup.html
@@ -119,7 +119,7 @@
 
     <div id="loading-overlay">
         <div class="spinner"></div>
-        <div class="loading-text">Processing...</div>
+        <div id="loading-text" class="loading-text" data-i18n="loading.processing">Processing...</div>
     </div>
 
     <script src="lib/xlsx.mini.min.js"></script>
